----------------------------------
[2008-07-15 Ver 0.24 -> 0.25]
- Fixed bug about 'textarea' tag replace logic in wiz_pager.(thx ramu)
- Added 'SimpleXMLElement::getName()' exists check.(thx masa)
- Added 'Pager' setting in admin.php?act=GeneralSetting.(thx anna)
- Added 'Content-type' setting in admin.php?act=GeneralSetting.(thx jidaikobo)
----------------------------------
[2008-07-07 Ver 0.23 -> 0.24]
- Fixed bug about 'mobile' theme is not have effect, when user theme was registered.
- Added image file exists check and get logic.(thx anna)
- Added clear compiled cache in {XOOPS_ROOT_PATH}/templates_c.(thx mbxoops)
----------------------------------
[2008-06-16 Ver 0.22 -> 0.23]
- Added dummy file for old preload script.
- Fixed bug about 'a' tag replace logic.(thx nico)
- Modified redirect logic.(thx toorisugari * spelled in Japanese)
- Fixed bug about exchange theme logic.(thx toshikun, nico2)
- Modified footer in theme file.
- Modified anchor in theme file.
----------------------------------
[2008-05-26 Ver 0.21 -> 0.22]
- Fixed bug about failed simple login with DoCoMo.(thx okamOTO)
- Adding caution in login form.
----------------------------------
[2008-05-22 Ver 0.20 -> 0.21]
- Fixed bug about wrong code with php4.(thx toshikun)
- Fixed bug about gticket include.(thx okamOTO)
- Fixed bug about failed simple login.
----------------------------------
[2008-05-14 Ver 0.1.5 -> 0.20]
- Fixed some bug.
- Adding some functions.
  - Resize image.
  - Page division.
  - Non display block setting.
  - Simple login.
- Rewrite many codes.
- Adding .htaccess file for pico.
----------------------------------
[2008-04-19 Ver 0.1.4 -> 0.1.5]
- Fixed bug about failed mb_detect_encoding, when "mbstring.detect_order" not exists in php.ini.(thx mitsunobu)
- Exchange resource.db.php.
----------------------------------
[2008-04-06 Ver 0.1.3 -> 0.1.4]
- Adding the preamble of the license.
- Adding PHP version check logic.
----------------------------------